# ROS2-USV

./: README.md
exploration/: CMakeLists.txt  package.xml
serial/: CMakeLists.txt  package.xml
serial/src/: serial.cpp
usv_controller/: CMakeLists.txt  package.xml  usv_controller.xml
usv_controller/config/: parameters.yaml
usv_controller/include/: usv_controller.hpp
usv_controller/src/: usv_controller.cpp
usv_hardware/: CMakeLists.txt  package.xml  usv_hardware.xml
usv_hardware/bringup/: navigation_launch.py  usv_base.launch.py
usv_hardware/config/: controller.yaml  mapper_params_online_async.yaml  nav2_params.yaml  robot_localization_parameters.yaml  twist_mux.yaml  ydlidar_x3.yaml
usv_hardware/control/: control.xacro
usv_hardware/description/: usv.urdf.xacro  usv_core.xacro
usv_hardware/include/: usv_hardware.hpp
usv_hardware/src/: usv_hardware.cpp
usv_hardware/urdf/: usv.urdf.xacro
